- 애니메이션 수정

--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -6732,7 +6732,103 @@ body {
 .line_code span + p {
   margin-top: 10px;
 }
+/*
+	.line_code_box {
+		@bg:#f4f4f4;
+		@pd_top:13px;
+		@bd_width:4px;
+
+		.clear;
+		position:relative; overflow:hidden;
+		padding:@pd_top 12px @pd_top 16px;
+		border-left:@bd_width solid @green;
+		background:@bg;
+		code {background:#f4f4f4;}
+
+		&.line_code_number {
+			ul {.code_css; padding:0; background:transparent;}
+			li {position:relative; padding-left:0; white-space:nowrap;}
+
+			&.line_true {
+				@size:41px;
+				padding:0;
+
+				.line_number {
+					.code_css;
+					position:absolute; left:0; top:0; z-index:1;
+					width:@size; height:100%; padding:@pd_top 0;
+					background:rgba(255,255,255,.7);
+					counter-reset:line_number;
+					&:before {
+						position:absolute; right:0; top:0; bottom:0;
+						width:1px; background:rgba(0,0,0,.15);
+						content:"";
+					}
+					li {
+						padding-right:12px;
+						color:#888; text-align:right;
+						&:before {
+							counter-increment:line_number;
+							content:counters(line_number, "");
+						}
+					}
+				}
+				.scroll_wrap {
+					position:relative; overflow:hidden;
+					margin-left:@size;
+				}
+				.scroll_inner {display:inline-block; padding-right:12px;}
+				.code_box {
+					padding:@pd_top 0 @pd_top 16px;
+					li {height:26px; line-height:26px;}
+				}
+			}
+		}
+	}
+	@media(max-width:@screen-sm-max){
+		.line_code_box {
+			@pd_top:9px;
+			@bd_width:4px;
+
+			padding:9px 7px 9px 11px;
+			.indent {margin-left:10px;}
+			.indent_max {margin-left:20px;}
+			.indent_max_max {margin-left:30px;}
+
+			&.line_code_number {
+				ul {font-size:13px;}
+
+				&.line_true {
+					@size:36px;
+					.line_number {
+						width:@size; padding:@pd_top 0;
+						font-size:13px;
+						li {padding-right:10px;}
+					}
+					.scroll_wrap {margin-left:@size;}
+					.scroll_inner {padding-right:10px;}
+					.code_box {
+						padding:@pd_top 0 @pd_top 10px;
+						li {height:22px; line-height:22px;}
+					}
+				}
+			}
+		}
+	}
+ 	*/
 .line_code_box {
+  position: relative;
+}
+.line_code_box .scroll_wrap {
+  position: relative;
+  overflow: hidden;
+  margin-left: 41px;
+}
+.line_code_box .scroll_inner {
+  display: inline-block;
+  padding-right: 12px;
+}
+.line_code_box:not(.km_gist_skin) {
   *zoom: 1;
   position: relative;
   overflow: hidden;
@@ -6740,15 +6836,15 @@ body {
   border-left: 4px solid #00986b;
   background: #f4f4f4;
 }
-.line_code_box:after {
+.line_code_box:not(.km_gist_skin):after {
   display: block;
   clear: both;
   content: "";
 }
-.line_code_box code {
+.line_code_box:not(.km_gist_skin) code {
   background: #f4f4f4;
 }
-.line_code_box.line_code_number ul {
+.line_code_box:not(.km_gist_skin).line_code_number ul {
   padding: 0 2px;
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   color: #111;
@@ -6760,25 +6856,25 @@ body {
   padding: 0;
   background: transparent;
 }
-.line_code_box.line_code_number ul.clear {
+.line_code_box:not(.km_gist_skin).line_code_number ul.clear {
   display: block;
 }
-.line_code_box.line_code_number ul.clear i {
+.line_code_box:not(.km_gist_skin).line_code_number ul.clear i {
   float: left;
   margin-right: 4px;
 }
-.line_code_box.line_code_number ul.in_block i {
+.line_code_box:not(.km_gist_skin).line_code_number ul.in_block i {
   display: inline-block;
 }
-.line_code_box.line_code_number li {
+.line_code_box:not(.km_gist_skin).line_code_number li {
   position: relative;
   padding-left: 0;
   white-space: nowrap;
 }
-.line_code_box.line_code_number.line_true {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true {
   padding: 0;
 }
-.line_code_box.line_code_number.line_true .line_number {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number {
   padding: 0 2px;
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   color: #111;
@@ -6797,17 +6893,17 @@ body {
   background: rgba(255, 255, 255, 0.7);
   counter-reset: line_number;
 }
-.line_code_box.line_code_number.line_true .line_number.clear {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number.clear {
   display: block;
 }
-.line_code_box.line_code_number.line_true .line_number.clear i {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number.clear i {
   float: left;
   margin-right: 4px;
 }
-.line_code_box.line_code_number.line_true .line_number.in_block i {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number.in_block i {
   display: inline-block;
 }
-.line_code_box.line_code_number.line_true .line_number:before {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number:before {
   position: absolute;
   right: 0;
   top: 0;
@@ -6816,67 +6912,182 @@ body {
   background: rgba(0, 0, 0, 0.15);
   content: "";
 }
-.line_code_box.line_code_number.line_true .line_number li {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number li {
   padding-right: 12px;
   color: #888;
   text-align: right;
 }
-.line_code_box.line_code_number.line_true .line_number li:before {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number li:before {
   counter-increment: line_number;
   content: counters(line_number, "");
 }
-.line_code_box.line_code_number.line_true .scroll_wrap {
-  position: relative;
-  overflow: hidden;
-  margin-left: 41px;
-}
-.line_code_box.line_code_number.line_true .scroll_inner {
-  display: inline-block;
-  padding-right: 12px;
-}
-.line_code_box.line_code_number.line_true .code_box {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .code_box {
   padding: 13px 0 13px 16px;
 }
-.line_code_box.line_code_number.line_true .code_box li {
+.line_code_box:not(.km_gist_skin).line_code_number.line_true .code_box li {
   height: 26px;
   line-height: 26px;
 }
+.line_code_box.km_gist_skin {
+  overflow: hidden;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+.line_code_box.km_gist_skin textarea {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+}
+.line_code_box.km_gist_skin .km_gist_con {
+  position: relative;
+}
+.line_code_box.km_gist_skin .km_gist_con * {
+  line-height: 22px;
+  font-size: 14px;
+  font-weight: normal !important;
+  letter-spacing: 0;
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number {
+  padding: 0 2px;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  color: #111;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: -0.5px;
+  background: #eee;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 41px;
+  height: 100%;
+  padding: 11px 0;
+  background: transparent;
+  counter-reset: line_number;
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number.clear {
+  display: block;
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number.clear i {
+  float: left;
+  margin-right: 4px;
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number.in_block i {
+  display: inline-block;
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number:before {
+  display: none;
+  opacity: .6;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  background: #ddd;
+  content: "";
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number li {
+  padding-right: 12px;
+  color: #bbb;
+  text-align: right;
+}
+.line_code_box.km_gist_skin .km_gist_con .line_number li:before {
+  font-size: 12px;
+  counter-increment: line_number;
+  content: counters(line_number, "");
+}
+.line_code_box.km_gist_skin .km_gist_con .km_gist_skin_pre {
+  padding: 11px 4px 11px 8px;
+}
+.line_code_box.km_gist_skin .km_gist_con .km_gist_skin_code {
+  padding: 0;
+  background: #fff;
+}
+.line_code_box.km_gist_skin .km_gist_con .iScrollIndicator {
+  background: rgba(0, 0, 0, 0.12);
+}
+.line_code_box.km_gist_skin .km_gist_con .iScrollIndicator:hover {
+  background: rgba(0, 0, 0, 0.32);
+}
+.line_code_box.km_gist_skin .km_gist_footer {
+  line-height: 16px;
+  padding: 10px 17px 13px;
+  font-size: 12px;
+  color: #666;
+  letter-spacing: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  background-color: #f7f7f7;
+  border-top: 1px solid #ddd;
+}
+.line_code_box.km_gist_skin .km_gist_footer i {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 12px;
+}
+.line_code_box.km_gist_skin .km_gist_footer b {
+  color: #595959;
+}
+.line_code_box.km_gist_skin .km_gist_footer span {
+  padding: 0 2px;
+}
 @media (max-width: 767px) {
-  .line_code_box {
+  .line_code_box .scroll_wrap {
+    margin-left: 36px;
+  }
+  .line_code_box .scroll_inner {
+    padding-right: 10px;
+  }
+  .line_code_box:not(.km_gist_skin) {
     padding: 9px 7px 9px 11px;
   }
-  .line_code_box .indent {
+  .line_code_box:not(.km_gist_skin) .indent {
     margin-left: 10px;
   }
-  .line_code_box .indent_max {
+  .line_code_box:not(.km_gist_skin) .indent_max {
     margin-left: 20px;
   }
-  .line_code_box .indent_max_max {
+  .line_code_box:not(.km_gist_skin) .indent_max_max {
     margin-left: 30px;
   }
-  .line_code_box.line_code_number ul {
+  .line_code_box:not(.km_gist_skin).line_code_number ul {
     font-size: 13px;
   }
-  .line_code_box.line_code_number.line_true .line_number {
+  .line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number {
     width: 36px;
     padding: 9px 0;
     font-size: 13px;
   }
-  .line_code_box.line_code_number.line_true .line_number li {
+  .line_code_box:not(.km_gist_skin).line_code_number.line_true .line_number li {
     padding-right: 10px;
   }
-  .line_code_box.line_code_number.line_true .scroll_wrap {
-    margin-left: 36px;
-  }
-  .line_code_box.line_code_number.line_true .scroll_inner {
-    padding-right: 10px;
-  }
-  .line_code_box.line_code_number.line_true .code_box {
+  .line_code_box:not(.km_gist_skin).line_code_number.line_true .code_box {
     padding: 9px 0 9px 10px;
   }
-  .line_code_box.line_code_number.line_true .code_box li {
+  .line_code_box:not(.km_gist_skin).line_code_number.line_true .code_box li {
     height: 22px;
     line-height: 22px;
+  }
+  .line_code_box.km_gist_skin .km_gist_con * {
+    line-height: 20px;
+    font-size: 12px;
+  }
+  .line_code_box.km_gist_skin .km_gist_con .line_number {
+    width: 36px;
+    padding: 8px 0;
+  }
+  .line_code_box.km_gist_skin .km_gist_con .line_number li {
+    padding-right: 8px;
+  }
+  .line_code_box.km_gist_skin .km_gist_con .km_gist_skin_pre {
+    padding: 8px 4px 8px 8px;
+  }
+  .line_code_box.km_gist_skin .km_gist_footer {
+    padding: 8px 13px 11px;
+    letter-spacing: -0.5px;
   }
 }
 .img_figure {
