--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2716,8 +2716,17 @@
 		textarea {position:absolute; left:0; top:0; width:1px; height:1px; opacity:0;}
 
 		.uk_gist_content {
+			@line-height:24px;
 			position:relative;
-			* {line-height:22px; font-size:14px; font-weight:normal !important; letter-spacing:0;}
+			* {
+				line-height:@line-height; font-size:14px; letter-spacing:0;
+				//font-weight:normal !important;
+			}
+			.uk_leng_ko {
+				//display:inline-block; vertical-align:top;
+				//line-height:@line-height - 0; padding-top:0;
+				//font-size:13px; //.font-kr;
+			}
 
 			.line_number {
 				.code_css;
@@ -2754,8 +2763,8 @@
 				display:inline-block; vertical-align:top;
 				font-size:12px;
 			}
-			b {color:#595959;}
-			span {padding:0 2px;}
+			b {color:#555555;}
+			.hyphen {padding:0 2px;}
 		}
 	}
 	.ios .uk_gist_code_inner {padding-right:70px !important;}
@@ -2766,6 +2775,7 @@
 
 			.uk_gist_content {
 				* {line-height:20px; font-size:12px;}
+				//.uk_leng_ko {font-size:12px;}
 
 				.line_number {
 					width:@line_size; padding:@pd_top 0 0;
@@ -2775,7 +2785,8 @@
 			}
 			.uk_gist_footer {
 				padding:8px 13px 11px; letter-spacing:-0.5px;
-				span {padding:0;}
+				.by {display:none;}
+				.hyphen {padding:0;}
 			}
 		}
 	}
