--- a/assets/lib/css/github-gist.css
+++ b/assets/lib/css/github-gist.css
@@ -100,6 +100,8 @@
 .uk_ex_line:before {content:"[";}
 .uk_ex_line:after {content:"]";}
 
+.uk_color_error,
+.uk_color_error *  {color:red !important;}
 
 
 
