--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2746,19 +2746,19 @@
 					}
 				}
 			}
-			.uk_gist_code_pre {display:block; overflow-x:auto;}
+			.uk_gist_code_pre {display:flex; overflow-x:auto;}
 			.uk_gist_code_wrap {
-				display:flex;
 				padding:@pd_top 0 @pd_top @line_size + 5px;
 				background:transparent;
 			}
-			.uk_gist_code_inner {padding-right:20px;}
+			.uk_gist_code_line {display:inline-block; padding-right:20px;}
 		}
 		.uk_gist_footer {
 			line-height:16px; padding:10px 17px 13px;
 			font-size:12px; color:#666; letter-spacing:0;
 			font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 			background-color:#f7f7f7; border-top:1px solid @border_color;
+			.by {display:inline-block;}
 			i {
 				display:inline-block; vertical-align:top;
 				font-size:12px;
@@ -2767,7 +2767,7 @@
 			.hyphen {padding:0 2px;}
 		}
 	}
-	.ios .uk_gist_code_inner {padding-right:70px !important;}
+	//.ios .uk_gist_code_inner {padding-right:70px !important;}
 	@media(max-width:@screen-sm-max){
 		.uk_gist_code_box {
 			@line_size:36px;
@@ -2782,10 +2782,14 @@
 					li {padding-right:8px;}
 				}
 				.uk_gist_code_wrap {padding:@pd_top 0 @pd_top @line_size + 5px;}
+				.uk_gist_code_line {padding-right:15px;}
 			}
 			.uk_gist_footer {
 				padding:8px 13px 11px; letter-spacing:-0.5px;
-				.by {display:none;}
+				i {
+					line-height:14px; padding-top:2px;
+					font-size:10px;
+				}
 				.hyphen {padding:0;}
 			}
 		}
