--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -95,7 +95,7 @@ input[type="range"] {
 	&::-ms-thumb {width:26px; height:26px; margin-top:0; background:@white; border:2px solid @gray; border-radius:100%;}
 }
 
-
+.sub_page .uk_container {background:#eee !important;}
 
 //mark tag
 /*
