--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -333,6 +333,9 @@ input[type="range"]::-ms-thumb {
   border: 2px solid #666;
   border-radius: 100%;
 }
+.sub_page .uk_container {
+  background: #fcfcfc !important;
+}
 /*
 mark {
 	position:relative; z-index:1;
