--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -6914,7 +6914,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 41px;
   padding: 9px 0 0;
   background: transparent;
@@ -6952,8 +6952,33 @@ body {
   background: transparent;
 }
 .uk_gist_code_box .uk_gist_content .uk_gist_code_line {
+  overflow: hidden;
   display: inline-block;
+  position: relative;
+  z-index: 1;
   padding-right: 20px;
+}
+.uk_gist_code_box .uk_gist_content .tab_indent_line {
+  opacity: .1;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(0, -50%);
+  z-index: -1;
+  height: calc(100% + 2px);
+  font-size: 0;
+}
+.uk_gist_code_box .uk_gist_content .tab_indent_line .tab_indent {
+  display: inline-block;
+  height: 100%;
+}
+.uk_gist_code_box .uk_gist_content .tab_indent_line .tab_indent:before {
+  display: inline-block;
+  height: 100%;
+  content: attr(data-tab);
+}
+.uk_gist_code_box .uk_gist_content .tab_indent_line .tab_indent:not(:last-child):before {
+  box-shadow: 1px 0 0 0 #000000;
 }
 .uk_gist_code_box .uk_gist_footer {
   line-height: 16px;
@@ -6998,7 +7023,7 @@ body {
     padding-right: 15px;
   }
   .uk_gist_code_box .uk_gist_footer {
-    padding: 8px 13px 11px;
+    padding: 9px 13px 10px;
     letter-spacing: -0.5px;
   }
   .uk_gist_code_box .uk_gist_footer i {
