콘텐트 그룹화 정리

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -174,8 +174,8 @@ mark {
 	position:relative; //width:100%;
 	background:#fff; border:@edt_border_width solid @edt_border_color;
 	.code_wrap * {
-		line-height:20px; letter-spacing:-0.5px;
-		font-size:13px; font-family:'Dotumche', sans-serif;
+		line-height:22px; letter-spacing:-0.5px;
+		font-size:13px; .font-code; font-weight:normal;
 	}
 	.CodeMirror {height:auto;}
 	.CodeMirror-line * {display:inline-block; vertical-align:top;}
