css 초급 > background 까지 정리

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2775,7 +2775,6 @@
 					//&:before {box-shadow:@box-shadow inset;}
 				}
 			}
-
 		}
 		.uk_gist_footer {
 			line-height:16px; padding:10px 17px 13px;
@@ -2790,6 +2789,8 @@
 			b {color:#555555;}
 			.hyphen {padding:0 2px;}
 		}
+
+		&.tab_line_remove .tab_indent_line {display:none !important;}
 	}
 	@media(max-width:@screen-sm-max){
 		.uk_gist_code_box {
