--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -196,7 +196,7 @@ a:focus {
 .hidden {
   overflow: hidden;
   display: inline-block;
-  position: absolute;
+  position: absolute !important;
   margin: -1px;
   width: 1px;
   height: 1px;
