css 중급 > At-Rule 까지 정리

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -223,7 +223,9 @@ mark {
 				//width:100%; height:calc(100% - @tit_height);
 				position:absolute; right:0; top:@edt_tit_height + 35px; z-index:2;
 				width:100%; height:calc(100% - (@edt_tit_height + 35px));
-				background:#fafafa; border-top:1px solid #d5d5d5;
+				//background:#fafafa;
+				background:#fff;
+				border-top:1px solid #d5d5d5;
 			}
 			.browserTitle {
 				position:absolute; left:0; top:0; overflow:hidden; z-index:1;
