--- a/assets/lib/css/less/uk_sub.less
+++ b/assets/lib/css/less/uk_sub.less
@@ -242,6 +242,16 @@
 	100% {opacity:1; transform:scale(1, 1);}
 }
 
+.uk_note.css_gradiant {
+	color:#fff;
+	border:0;
+	background: #1e73ff;
+	background: -webkit-linear-gradient(left, #1e73ff, green);
+	background: -moz-linear-gradient(left, #1e73ff, green);
+	background: -o-linear-gradient(left, #1e73ff, green);
+	background: linear-gradient(left, #1e73ff, green);
+}
+
 
 .flex_direction_compare {
 	.clear;
