--- a/assets/lib/css/uk_sub.css
+++ b/assets/lib/css/uk_sub.css
@@ -562,7 +562,7 @@ mark {
   z-index: 2;
   width: 100%;
   height: calc(100% - (30px + 35px));
-  background: #fafafa;
+  background: #fff;
   border-top: 1px solid #d5d5d5;
 }
 .uk_editor[data-result="true"] .result_wrap .browserTitle {
@@ -2301,6 +2301,15 @@ mark {
     opacity: 1;
     transform: scale(1, 1);
   }
+}
+.uk_note.css_gradiant {
+  color: #fff;
+  border: 0;
+  background: #1e73ff;
+  background: -webkit-linear-gradient(left, #1e73ff, green);
+  background: -moz-linear-gradient(left, #1e73ff, green);
+  background: -o-linear-gradient(left, #1e73ff, green);
+  background: linear-gradient(left, #1e73ff, green);
 }
 .flex_direction_compare {
   *zoom: 1;
