--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2487,6 +2487,7 @@
 	}
 
 	.ol_list_set(@name) {
+		li.before_blue:before {color:@blue !important;}
 		> b, > strong {color:#444; font-weight:600;}
 		> ol {counter-reset:@name;}
 		> li, > ol > li {
