css 고급 > 플렉스 > 자식 속성 및 데모 까지 정리

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -971,6 +971,7 @@ mark {
 
 .bg_none {background-color:transparent !important;}
 
+.weight-bold {font-weight:bold !important;}
 .weight-800 {font-weight:500 !important;}
 .weight-700 {font-weight:500 !important;}
 .weight-600 {font-weight:500 !important;}
