--- a/assets/kmtemp/transform/css/layout.less
+++ b/assets/kmtemp/transform/css/layout.less
@@ -1306,7 +1306,7 @@ body {background:none;}
 			.c_sub {
 				margin-top:10px;
 				li {
-					margin-top:2px; color:@color1;
+					padding-top:2px; color:@color1;
 					//i {color:lighten(@red, 15%);}
 					i {.font-sc300;  color:darken(@blue, 5%);}
 				}
@@ -1314,15 +1314,24 @@ body {background:none;}
 					li:not(.not_play) {
 						&:before {
 							width:8px; height:8px; top:50%; transform:translate(0, -50%);
+							margin-top:1px;
 							background:@red; border-radius:100%;
 						}
 						&:after {
-							position:absolute; left:0; top:0; z-index:1;
-							width:100%; height:100%;
-							background:rgba(0,0,0,.05); content:"";
+							position:absolute; left:0; bottom:0; z-index:1;
+							width:100%; height:calc(100% - 2px);
+							background:rgba(0,0,0,.05); border:0; content:"";
 						}
 					}
 					span {opacity:.4;}
+
+					&.enter_effect:hover {
+						li:before {opacity:.15;}
+						li:hover:before {opacity:1;}
+						li:hover:after {
+							background-color:transparent; border:1px solid #f2f2f2;
+						} //379ad6
+					}
 				}
 			}
 			.tab1 {
